[package]
name = "luarust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
mlua = { version = "0.8.8", features = ["luajit", "vendored", "async", "serialize", "macros"] }
serde_json = "1.0.94"
rustyline = "11.0.0"
